<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="24dp"
    android:layout_marginBottom="8dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        style="@style/authHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/auth_margin"
        android:text="@string/sign_in_title" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/parent"
        android:layout_marginTop="@dimen/auth_margin">

        <EditText
            android:id="@+id/sign_in_email"
            style="@style/modifiedEditText"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/parent"
        android:layout_marginTop="@dimen/auth_margin"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/sign_in_password"
            style="@style/modifiedEditText"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/remember_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:buttonTint="@color/primary"
        android:checked="true"
        android:text="@string/remember_me"
        android:textColor="@color/primary"
        android:textSize="12sp"
        app:fontFamily="monospace" />

    <Button
        android:id="@+id/sign_in"
        style="@style/authButton"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/auth_margin"
        android:text="@string/sign_in_button"
        tools:ignore="RtlHardcoded" />

    <ProgressBar
        android:id="@+id/sign_in_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/auth_margin"
        android:indeterminateTint="@color/primary"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/sign_in_switch"
        style="@style/parent"
        android:layout_marginTop="@dimen/auth_margin"
        android:text="@string/switch_sign_up_hint"
        android:textAlignment="textEnd"
        android:textColor="@color/primary"
        android:textStyle="bold" />
</LinearLayout>