<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="50dp"
        android:background="@color/primary"
        android:translationZ="10dp"
        tools:ignore="MissingConstraints">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/group_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:src="@mipmap/ic_launcher"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/update_group_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/group_image"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/purple_700"
            android:contentDescription="Edit profile image"
            android:src="@drawable/ic_edit"
            app:tint="@color/white"
            tools:ignore="HardcodedText" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="100dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="100dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/parent"
                        android:layout_marginTop="@dimen/auth_margin">

                        <EditText
                            android:id="@+id/group_name"
                            style="@style/modifiedEditText"
                            android:hint="Name"
                            android:inputType="text"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/edit_group_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/auth_margin"
                        android:text="@string/edit_group_button"
                        tools:ignore="RtlHardcoded" />

                    <ProgressBar
                        android:id="@+id/edit_loading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/auth_margin"
                        android:indeterminateTint="@color/primary"
                        android:visibility="gone" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        app:cardBackgroundColor="@color/primary"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="0dp"
                        app:cardPreventCornerOverlap="false"
                        app:cardUseCompatPadding="true"
                        tools:ignore="MissingConstraints">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:justificationMode="inter_word"
                            android:text="@string/info_member_group"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            tools:ignore="MissingConstraints" />
                    </androidx.cardview.widget.CardView>

                    <Button
                        android:id="@+id/add_member_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/auth_margin"
                        android:text="@string/add_member_button"
                        tools:ignore="RtlHardcoded" />

                    <Button
                        android:id="@+id/cancel_add_member_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/auth_margin"
                        android:backgroundTint="@color/danger"
                        android:text="@string/cancel_add_member_button"
                        android:visibility="gone"
                        tools:ignore="RtlHardcoded" />

                    <include layout="@layout/fragment_member_list" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        app:cardBackgroundColor="@color/warning"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="0dp"
                        app:cardPreventCornerOverlap="false"
                        app:cardUseCompatPadding="true"
                        tools:ignore="MissingConstraints">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:justificationMode="inter_word"
                            android:text="@string/warning_delete_group"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            tools:ignore="MissingConstraints" />
                    </androidx.cardview.widget.CardView>

                    <Button
                        android:id="@+id/delete_group_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/auth_margin"
                        android:layout_marginBottom="@dimen/auth_margin"
                        android:text="@string/delete_group_button"
                        app:backgroundTint="@color/danger"
                        tools:ignore="RtlHardcoded" />

                    <ProgressBar
                        android:id="@+id/delete_loading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/auth_margin"
                        android:layout_marginBottom="@dimen/auth_margin"
                        android:indeterminateTint="@color/primary"
                        android:visibility="gone" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>